syntax = "proto3";

package manager;

message MsgSend {
    string fromId = 1;
    string toId = 2;
    string messageText = 3;
}

enum ResType {
    Ok = 0;
    ClientErr = 1;
    ServerErr = 2;
}

message MsgSendResult {
    ResType result = 1;
}


service AccountManager {
    

    rpc SendMessage(MsgSend) returns (MsgSendResult);
}